--- a/src/styles.scss
+++ b/src/styles.scss
@@ -57,6 +57,9 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 1.1rem;
   line-height: 1.8;
   color: $ink;
+  user-select: text;
+  -webkit-user-select: text;
+  -webkit-touch-callout: default;
 
   h1, h2, h3, h4, h5, h6 {
     font-family: $font-headline;
@@ -210,7 +213,6 @@ h1, h2, h3, h4, h5, h6 {
   .speech-block {
     transition: background 0.2s ease;
     border-radius: 2px;
-    display: inline;
   }
 
   .speech-active {
